# axelrod-rs

./: CHANGELOG.md  Cargo.toml  README.FR.md  README.md  sonar-project.properties
.github/workflows/: auto-tag.yml  ci.yml  release.yml  sonarqube.yml
src/: action.rs  cli.rs  export.rs  history.rs  lib.rs  main.rs  payoff.rs  player.rs
src/game/: game_match.rs  mod.rs
src/strategy/: always_cooperate.rs  always_defect.rs  davis.rs  feld.rs  generous_tft.rs  go_by_majority.rs  graaskamp.rs  grofman.rs  grudger.rs  joss.rs  mod.rs  nydegger.rs  pavlov.rs  prober.rs  random.rs  shubik.rs  suspicious_tft.rs  tit_for_tat.rs  tit_for_two_tats.rs  tullock.rs
src/tournament/: ecological.rs  mod.rs  round_robin.rs
