[package]
name = "axelrod-rs"
version = "0.2.0"
edition = "2024"
authors = ["Thibaut Maurras"]
description = "High-performance Iterated Prisoner's Dilemma simulator inspired by Robert Axelrod's tournaments"
license = "MIT"
repository = "https://github.com/foufou-exe/axelrod-rs"
keywords = ["game-theory", "prisoner-dilemma", "axelrod", "simulation", "evolution"]
categories = ["simulation", "science", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.9.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

# Parallelization
rayon = "1.10"

# Random
rand = "0.10.0"
rand_chacha = "0.10.0"

# Display
comfy-table = "7.2"
